# axon

./: README.md  package.json
.github/workflows/: desktop-release.yml
cli/: axon  axon-collect  axon-cron  axon-init  axon-morning  axon-rollup  axon-todo
desktop/: .gitignore  ARCHITECTURE.md  electron-builder.yml  index.html  package-lock.json  package.json  tailwind.config.ts  vite-plugin-axon.ts  vite.config.ts
desktop/electron/: main.js
desktop/src/: App.tsx  globals.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src-tauri/src/commands/: filesystem.rs
desktop/src/components/layout/: MobileNav.tsx  Shell.tsx  Sidebar.tsx
desktop/src/hooks/: useDataRefresh.ts  useFocusTrap.ts  useKeyboardShortcuts.ts  useMediaQuery.ts  useProjects.ts  useRollups.ts  useSessions.ts  useUpdateChecker.ts
desktop/src/lib/: apiClient.ts  jsonlParser.ts  parser.ts  projectScanner.ts  sessionDb.ts  sessionIndexer.ts  sessionMeta.ts  terminalManager.ts  terminalWs.ts  todoParser.test.ts  todoParser.ts  types.ts
desktop/src/providers/: DataProvider.tsx
desktop/src/server/: axonMiddleware.ts
desktop/src/store/: debugStore.ts  discoveryStore.ts  errorStore.ts  projectStore.ts  terminalStore.ts  uiStore.ts
desktop/src/views/: AboutView.tsx  AgentView.tsx  DecisionsView.tsx  GenesisProgressView.tsx  MorningView.tsx  OnboardingView.tsx  SessionsView.tsx  SettingsView.tsx  SourceControlView.tsx  TimelineView.tsx  TodosView.tsx
docs/design/: DESIGN_SYSTEM.md
(+25 files in other folders)
