[package]
name = "axon-desktop"
version = "0.1.0"
description = "Axon — Developer memory system"
authors = ["Rob"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "axon_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
dirs = "6"
